--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "name": "Zachary Quintana",
     "homepage": "https://github.com/zquintana"
   }],
+  "type": "symfony-bundle",
   "require": {
     "php": "~7.1",
     "symfony/form": "^4.0",
@@ -21,7 +22,7 @@
   "require-dev": {},
   "autoload": {
     "psr-4": {
-      "CleverAdminBundle\\": "src"
+      "CleverCoders\\AdminBundle\\": "src"
     }
   }
 }
