--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "symfony/framework-bundle": "^4.0",
     "symfony/http-foundation": "^4.0",
     "symfony/http-kernel": "^4.0",
-    "symfony/routing": "^4.0"
+    "symfony/routing": "^4.0",
+    "phootwork/collection": "^1.6"
   },
   "require-dev": {},
   "autoload": {
